// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders hover for step 1`] = `
<Touchable
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  testID="step-item-row"
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text="ZOLA CORKERY"
      />
      <Text
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Repellat quisquam recusandae alias consequuntur corporis.
      </Text>
    </Flex>
    <Touchable
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      testID="star-icon-button"
    >
      <Flex
        align="center"
        animation="fadeInRight"
        justify="center"
      >
        <Icon
          name="starIconFilled"
          style={
            Array [
              Object {
                "color": "#52C5DC",
                "fontSize": 35,
                "padding": 10,
              },
              undefined,
            ]
          }
          type="MissionHub"
        />
      </Flex>
    </Touchable>
  </Flex>
</Touchable>
`;

exports[`renders me correctly 1`] = `
<Touchable
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  testID="step-item-row"
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text="ME"
      />
      <Text
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        esse repellat quisquam
      </Text>
    </Flex>
  </Flex>
</Touchable>
`;

exports[`renders not me correctly 1`] = `
<Touchable
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  testID="step-item-row"
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text="ZOLA CORKERY"
      />
      <Text
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Repellat quisquam recusandae alias consequuntur corporis.
      </Text>
    </Flex>
  </Flex>
</Touchable>
`;

exports[`renders type action correctly 1`] = `
<Touchable
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  testID="step-item-row"
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text="ZOLA CORKERY"
      />
      <Text
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Repellat quisquam recusandae alias consequuntur corporis.
      </Text>
    </Flex>
    <Touchable
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      testID="star-icon-button"
    >
      <Flex
        align="center"
        animation="fadeInRight"
        justify="center"
      >
        <Icon
          name="starIcon"
          style={
            Array [
              Object {
                "color": "#52C5DC",
                "fontSize": 35,
                "padding": 10,
              },
              undefined,
            ]
          }
          type="MissionHub"
        />
      </Flex>
    </Touchable>
  </Flex>
</Touchable>
`;

exports[`renders type contact correctly 1`] = `
<Touchable
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  testID="step-item-row"
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <Text
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Repellat quisquam recusandae alias consequuntur corporis.
      </Text>
    </Flex>
  </Flex>
</Touchable>
`;

exports[`renders type reminder correctly 1`] = `
<Touchable
  activeOpacity={1}
  highlight={false}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "rgb(183, 231, 240)",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  testID="step-item-row"
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text="ZOLA CORKERY"
      />
      <Text
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Repellat quisquam recusandae alias consequuntur corporis.
      </Text>
    </Flex>
  </Flex>
</Touchable>
`;

exports[`renders type swipeable correctly 1`] = `
<Touchable
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  testID="step-item-row"
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text="ZOLA CORKERY"
      />
      <Text
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Repellat quisquam recusandae alias consequuntur corporis.
      </Text>
    </Flex>
  </Flex>
</Touchable>
`;

exports[`step item animations changes animation from fade in to fade out 1`] = `
<Touchable
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  testID="step-item-row"
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text="ZOLA CORKERY"
      />
      <Text
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Repellat quisquam recusandae alias consequuntur corporis.
      </Text>
    </Flex>
    <Touchable
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      testID="star-icon-button"
    >
      <Flex
        align="center"
        animation="fadeOutRight"
        justify="center"
      >
        <Icon
          name="starIcon"
          style={
            Array [
              Object {
                "color": "#52C5DC",
                "fontSize": 35,
                "padding": 10,
              },
              undefined,
            ]
          }
          type="MissionHub"
        />
      </Flex>
    </Touchable>
  </Flex>
</Touchable>
`;

exports[`step item animations changes animation from fade out to fade in 1`] = `
<Touchable
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  testID="step-item-row"
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text="ZOLA CORKERY"
      />
      <Text
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Repellat quisquam recusandae alias consequuntur corporis.
      </Text>
    </Flex>
    <Touchable
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      testID="star-icon-button"
    >
      <Flex
        align="center"
        animation="fadeInRight"
        justify="center"
      >
        <Icon
          name="starIcon"
          style={
            Array [
              Object {
                "color": "#52C5DC",
                "fontSize": 35,
                "padding": 10,
              },
              undefined,
            ]
          }
          type="MissionHub"
        />
      </Flex>
    </Touchable>
  </Flex>
</Touchable>
`;

exports[`step item animations renders animation fade in on mount 1`] = `
<Touchable
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  testID="step-item-row"
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text="ZOLA CORKERY"
      />
      <Text
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Repellat quisquam recusandae alias consequuntur corporis.
      </Text>
    </Flex>
    <Touchable
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      testID="star-icon-button"
    >
      <Flex
        align="center"
        animation="fadeInRight"
        justify="center"
      >
        <Icon
          name="starIcon"
          style={
            Array [
              Object {
                "color": "#52C5DC",
                "fontSize": 35,
                "padding": 10,
              },
              undefined,
            ]
          }
          type="MissionHub"
        />
      </Flex>
    </Touchable>
  </Flex>
</Touchable>
`;

exports[`step item animations renders no initial animation on mount 1`] = `
<Touchable
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  testID="step-item-row"
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text="ZOLA CORKERY"
      />
      <Text
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Repellat quisquam recusandae alias consequuntur corporis.
      </Text>
    </Flex>
  </Flex>
</Touchable>
`;
